tdf#93989 - prevent crash with non-vcl OpenGL contexts

Change-Id: Ia829b0f723c8ded1237e52d48f034da3c1ac249e
Signed-off-by: Michael Meeks <michael.meeks@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/18409
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>